tests/purs/failing/NonExhaustivePatGuard.out
Error found:
in module [33mMain[0m
at tests/purs/failing/NonExhaustivePatGuard.purs:4:1 - 4:16 (line 4, column 1 - line 4, column 16)

  A case expression could not be determined to cover all inputs.
  The following additional cases are required to cover all inputs:

    [33m_[0m

  Alternatively, add a Partial constraint to the type of the enclosing value.

while applying a function [33m$__unused[0m
  of type [33mPartial => t0 -> t0[0m
  to argument [33mcase x of        [0m
              [33m  x | 1 <- x -> x[0m
while checking that expression [33m$__unused (case x of        [0m
                               [33m             x | 1 <- x -> x[0m
                               [33m          )                 [0m
  has type [33mInt[0m
in value declaration [33mf[0m

where [33mt0[0m is an unknown type

See https://github.com/purescript/documentation/blob/master/errors/NoInstanceFound.md for more information,
or to contribute content related to this error.

